--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta name="author" content="FangDev, LLC">
 
   <link rel="stylesheet" href="css/master.css?v=1.0">
+  <link rel="shortcut icon" href="data/FangDev-Logo-Icon.ico">
+  <link rel="icon" type="image/png" href="data/FangDev-Logo-Icon.png" />
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,6 +18,14 @@
 </head>
 
 <body>
-  
+  <div id="coming-soon-container">
+	<img id="logo" src="data/FangDev-Logo.png" alt="FangDev Logo">
+	<img id="coming-soon" src="data/Coming-Soon.png" alt="Coming Soon!">
+  </div>
+  <div id="coming-soon-container-mobile">
+	<img id="mobile-logo" src="data/FangDev-Logo-Icon.png">
+	<img id="coming-soon-mobile" src="data/Coming-Soon.png" alt="Coming Soon!">
+  </div>
+ 
 </body>
 </html>
