Update Responsive CSS for Logo
Changed Display to None for hidden objects since the hidden objects were still setting a minimum width for the page size.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="FangDev development company">
   <meta name="author" content="FangDev, LLC">
 
-  <link rel="stylesheet" href="css/master.css?v=1.0">
+  <link rel="stylesheet" href="css/master.css">
   <link rel="shortcut icon" href="data/FangDev-Logo-Icon.ico">
   <link rel="icon" type="image/png" href="data/FangDev-Logo-Icon.png" />
 
