--- a/index.html
+++ b/index.html
@@ -11,21 +11,18 @@
   <link rel="stylesheet" href="css/master.css">
   <link rel="shortcut icon" href="data/FangDev-Logo-Icon.ico">
   <link rel="icon" type="image/png" href="data/FangDev-Logo-Icon.png" />
+  
+  <!-- for FF, Chrome, Opera -->
+  <link rel="icon" type="image/png" href="data/FangDev-Logo-Icon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="data/FangDev-Logo-Icon-32x32.png" sizes="32x32">
 
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+  <!-- for IE -->
+  <link rel="icon" type="image/x-icon" href="data/FangDev-Logo-Icon.ico" >
+  <link rel="shortcut icon" type="image/x-icon" href="data/FangDev-Logo-Icon.ico"/>
 </head>
 
 <body>
-  <div id="coming-soon-container">
-	<img id="logo" src="data/FangDev-Logo.png" alt="FangDev Logo">
-	<img id="coming-soon" src="data/Coming-Soon.png" alt="Coming Soon!">
-  </div>
-  <div id="coming-soon-container-mobile">
-	<img id="mobile-logo" src="data/FangDev-Logo-Icon.png">
-	<img id="coming-soon-mobile" src="data/Coming-Soon.png" alt="Coming Soon!">
-  </div>
- 
+	<div id="logo" alt="FangDev Logo"></div>
+	<div id="coming-soon" alt="Coming Soon"></div>
 </body>
 </html>
