Add Accessibility for Background Images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-	<div id="logo" alt="FangDev Logo"></div>
-	<div id="coming-soon" alt="Coming Soon"></div>
+	<div id="logo" role="img" aria-label="FangDev Logo"></div>
+	<div id="coming-soon" role="img" aria-label="Coming Soon"></div>
 </body>
 </html>
