Add header image

--- a/index.html
+++ b/index.html
@@ -52,10 +52,25 @@
 			</div>
 		</div>
 		
+		<div class="header-image">
+			<div class="container">
+				<div class="col-md-6 center-block">
+					<div class="main-caption-text">
+						designing for <em>you</em>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="">
+						<img class="main-image-logo center-block" src="data/FangDev-Logo-Small.png">
+					</div>
+				</div>
+			</div>
+		</div>
+		
 		<div class="middle-content">
 			<div class="container">
 				<div class="col-md-6 center-block">
-					<div class="website-image center-block">
+					<div class="website-image">
 						<div class="caption-text">Websites</div>
 						<div class="description-text">
 							Whether it be a website for your small business to display information, or
@@ -65,7 +80,7 @@
 					</div>
 				</div>
 				<div class="col-md-6 center-block">
-					<div class="webservices-image center-block">
+					<div class="webservices-image">
 						<div class="caption-text">Web Services</div>
 						<div class="description-text">
 							For those with specific needs, we offer backend solutions to help build and
