Add responsive design for mobile
Still need to work on tablet sizes, where there is an issue with the middle content.

--- a/index.html
+++ b/index.html
@@ -28,12 +28,18 @@
 		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
 					<a class="navbar-brand" href="#">
-						<span><img class="navbar-brand-logo" src="data/FangDev-Logo-Small-50x50.png"></span>
+						<span><img alt="FangDev Logo" class="navbar-brand-logo" src="data/FangDev-Logo-Small-50x50.png"></span>
 						<div class="navbar-brand-text">FangDev, LLC</div>
 					</a>
 				</div>
-				<div class="navbar-entries">
+				<div id="navbar" class="navbar-entries navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active"><a href="#">What We Do</a></li>
 						<li><a href="technology.html">Our Technologies</a></li>
@@ -46,7 +52,7 @@
 		
 		<div class="intro-background">
 			<div class="container">
-				<div class="col-md-12 center-block text-center intro-background">
+				<div class="col-xs-12 col-md-12 center-block text-center">
 					<span class="intro">We develop with your needs in mind</span>
 				</div>
 			</div>
@@ -61,7 +67,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="">
-						<img class="main-image-logo center-block" src="data/FangDev-Logo-Small.png">
+						<img alt="FangDev Logo" class="main-image-logo center-block" src="data/FangDev-Logo-Small.png">
 					</div>
 				</div>
 			</div>
@@ -69,7 +75,7 @@
 		
 		<div class="middle-content">
 			<div class="container">
-				<div class="col-md-6 center-block">
+				<div class="col-xs-12 col-md-6 center-block">
 					<div class="website-image">
 						<div class="caption-text">Websites</div>
 						<div class="description-text">
@@ -79,7 +85,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6 center-block">
+				<div class="col-xs-12 col-md-6 center-block">
 					<div class="webservices-image">
 						<div class="caption-text">Web Services</div>
 						<div class="description-text">
@@ -94,7 +100,7 @@
 		
 		<div class="bottom-content">
 			<div class="container">
-				<div class="col-md-3 center-block">
+				<div class="col-xs-6 col-md-3 center-block">
 					<div class="bottom-content-block center-block">
 						<div class="caption-text-bottom">Websites</div>
 						<div class="description-text-bottom">
@@ -104,7 +110,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3 center-block">
+				<div class="col-xs-6 col-md-3 center-block">
 					<div class="bottom-content-block center-block">
 						<div class="caption-text-bottom">Websites</div>
 						<div class="description-text-bottom">
@@ -114,7 +120,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3 center-block">
+				<div class="col-xs-6 col-md-3 center-block">
 					<div class="bottom-content-block center-block">
 						<div class="caption-text-bottom">Websites</div>
 						<div class="description-text-bottom">
@@ -124,7 +130,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3 center-block">
+				<div class="col-xs-6 col-md-3 center-block">
 					<div class="bottom-content-block center-block">
 						<div class="caption-text-bottom">Websites</div>
 						<div class="description-text-bottom">
