--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 		
 		<div class="header-image">
 			<div class="container">
-				<div class="col-md-6 center-block">
+				<div class="col-xs-12 col-lg-6 center-block">
 					<div class="main-caption-text">
 						designing for <em>you</em>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-lg-6">
 					<div class="">
 						<img alt="FangDev Logo" class="main-image-logo center-block" src="data/FangDev-Logo-Small.png">
 					</div>
