Add social media icons in footer

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		
 		<link rel="stylesheet" href="css/screen.css">
-		<link rel="shortcut icon" href="data/FangDev-Logo-Icon.ico">
-		<link rel="icon" type="image/png" href="data/FangDev-Logo-Icon.png" />
+		<link rel="shortcut icon" href="images/FangDev-Logo-Icon.ico">
+		<link rel="icon" type="image/png" href="images/FangDev-Logo-Icon.png" />
 
 		<!-- for FF, Chrome, Opera -->
-		<link rel="icon" type="image/png" href="data/FangDev-Logo-Icon-16x16.png" sizes="16x16">
-		<link rel="icon" type="image/png" href="data/FangDev-Logo-Icon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="images/FangDev-Logo-Icon-16x16.png" sizes="16x16">
+		<link rel="icon" type="image/png" href="images/FangDev-Logo-Icon-32x32.png" sizes="32x32">
 
 		<!-- for IE -->
-		<link rel="icon" type="image/x-icon" href="data/FangDev-Logo-Icon.ico" >
-		<link rel="shortcut icon" type="image/x-icon" href="data/FangDev-Logo-Icon.ico"/>
+		<link rel="icon" type="image/x-icon" href="images/FangDev-Logo-Icon.ico" >
+		<link rel="shortcut icon" type="image/x-icon" href="images/FangDev-Logo-Icon.ico"/>
 	</head>
 
 	<body>
@@ -35,7 +35,7 @@
 						<span class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand" href="#">
-						<span><img alt="FangDev Logo" class="navbar-brand-logo" src="data/FangDev-Logo-Small-50x50.png"></span>
+						<span><img alt="FangDev Logo" class="navbar-brand-logo" src="images/FangDev-Logo-Small-50x50.png"></span>
 						<div class="navbar-brand-text">FangDev, LLC</div>
 					</a>
 				</div>
@@ -67,7 +67,7 @@
 				</div>
 				<div class="col-lg-6">
 					<div class="">
-						<img alt="FangDev Logo" class="main-image-logo center-block" src="data/FangDev-Logo-Small.png">
+						<img alt="FangDev Logo" class="main-image-logo center-block" src="images/FangDev-Logo-Small.png">
 					</div>
 				</div>
 			</div>
@@ -142,11 +142,18 @@
 				</div>
 			</div>
 		</div>
-		
 		<footer>
 			<div class="container">
-				<div class="col-md-12">
-					<div class="footer-text">Copyright &copy; FangDev, LLC 2015</div>
+				<div class="col-md-6">
+					<span class="footer-text">Copyright &copy; FangDev, LLC 2015</span>
+				</div>
+				<div class="col-md-6">
+					<div class="footer-icon">
+						<a href="http://www.facebook.com" class="facebook_icon"></a>
+						<a href="http://www.twitter.com" class="twitter_icon"></a>
+						<a href="http://www.google.com" class="google_plus_icon"></a>
+						<a href="http://www.github.com/FangDev" class="github_icon"></a>
+					<div>
 				</div>
 			</div>
 		</footer>
