--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active"><a href="index.html">What We Do</a></li>
 						<li><a href="technology.html">Our Technologies</a></li>
-						<li><a href="samples.html">Samples</a></li> 
+						<li><a href="services.html">Services</a></li> 
 						<li><a href="contact.html">Contact Us</a></li> 
 					</ul>
 				</div>
